--- a/mqtt_package/mqtt_resources.yaml
+++ b/mqtt_package/mqtt_resources.yaml
@@ -1,4 +1,5 @@
 mqtt_resources:
   BROKER_ADDRESS: "localhost"
   BROKER_PORT: 1883
-  TOPIC: "calendarEvents"
+  TOPIC_CALENDAR: "calendarEvents"
+  TOPIC_DIRECT: "directPlay"
